--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,12 +31,18 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
+    # - name: Run docker-compose
+    #   run: docker compose -f ${{ github.workspace }}/docker/prd/docker-compose.yml up -d
+
     - uses: actions-rs/toolchain@v1
       with:
         profile: minimal
         toolchain: stable
 
     - uses: Swatinem/rust-cache@v1
+
+    - name: Clippy
+      run: cargo clippy --fix
 
     - name: Run build and test
       run: cargo test --verbose
