--- a/usecase/Cargo.toml
+++ b/usecase/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+domain = { path = "../domain" }
+derive_builder = "0.11.2"
+anyhow = "1.0.58"
+async-trait = "0.1.56"
