--- a/domain/Cargo.toml
+++ b/domain/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.62"
+chrono = "0.4.22"
+once_cell = "1.13.1"
+regex = "1.6.0"
