--- a/domain/Cargo.toml
+++ b/domain/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.62"
+async-trait = "0.1.57"
 chrono = "0.4.22"
 once_cell = "1.13.1"
 regex = "1.6.0"
+ulid = "1.0.0"
 unicode-segmentation = "1.9.0"
